force-app/main/default/objects/OrgSync_PublishSetting_Mapping__mdt/OrgSync_PublishSetting_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is designed to store publish setting per sobject and per record type of that sobject</description>
    <label>OrgSync Publish Setting Mapping</label>
    <pluralLabel>OrgSync Publish Setting Mappings</pluralLabel>
</CustomObject>