force-app/main/default/objects/OrgSync_PublishSetting_Mapping__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is designed to create record for future or ongoing development</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>