force-app/main/default/objects/OrgSync_PublishSetting_Mapping__mdt/fields/IsRaceConditionApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsRaceConditionApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is designed to indicate whether race condition is applicable or not</description>
    <label>Is Race Condition Applicable</label>
    <type>Checkbox</type>
</CustomField>