force-app/main/default/objects/OrgSync_PublishSetting_Mapping__mdt/fields/Publish_Setting_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Publish_Setting_Developer_Name__c</fullName>
    <description>This field is designed to store XCDC_Publish Setting developer name for this Sobject and record type combination</description>
    <label>Publish Setting Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>