force-app/main/default/objects/OrgSync_PublishSetting_Mapping__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>This field is designed to store sobject name for which publish setting is created</description>
    <label>Sobject API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>